Added The Security to Swagger UI
