# cmd/api/main.go
@@ -21,6 +21,10 @@ var configPath = flag.String("config", "", "configuration path")
 
 // @host			127.0.0.1:8080
 // @BasePath		/api/v1
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description "Type 'Bearer' followed by a space and your JWT token."
 func main() {
 	cfg := readConfig()
 
