# docs/swagger.yaml
@@ -1,5 +1,13 @@
 basePath: /api/v1
 definitions:
+  notification.NotificationType:
+    enum:
+    - Invite User
+    - Move Task
+    type: string
+    x-enum-varnames:
+    - UserInvited
+    - TaskMoved
   presenter.BoardColumnResp:
     properties:
       id:
@@ -48,6 +56,30 @@ definitions:
       order:
         type: integer
     type: object
+  presenter.CreateBoardReq:
+    properties:
+      name:
+        example: myboard123
+        type: string
+      type:
+        example: private(public)
+        type: string
+    type: object
+  presenter.CreateBoardResponse:
+    properties:
+      board_id:
+        type: string
+      columns:
+        items:
+          $ref: '#/definitions/presenter.ColumnResponseItem'
+        type: array
+      created_at:
+        type: string
+      name:
+        type: string
+      type:
+        type: string
+    type: object
   presenter.CreateColumnItem:
     properties:
       name:
@@ -69,6 +101,39 @@ definitions:
           $ref: '#/definitions/presenter.ColumnResponseItem'
         type: array
       message:
+        type: string
+    type: object
+  presenter.CreateTaskResp:
+    properties:
+      assignee_user_id:
+        type: string
+      board_id:
+        type: string
+      column_id:
+        type: string
+      dependsOn:
+        items:
+          $ref: '#/definitions/presenter.DependTaskResp'
+        type: array
+      description:
+        type: string
+      end_at:
+        type: string
+      id:
+        type: string
+      parent_id:
+        description: can be null for tasks not sub tasks
+        type: string
+      start_at:
+        type: string
+      story_at:
+        type: integer
+      title:
+        type: string
+    type: object
+  presenter.DependTaskResp:
+    properties:
+      id:
         type: string
     type: object
   presenter.DependentTasks:
@@ -102,7 +167,38 @@ definitions:
           $ref: '#/definitions/presenter.BoardUserResp'
         type: array
     type: object
-  presenter.InviteUserToBoard:
+  presenter.FullTaskResp:
+    properties:
+      dependencies:
+        items:
+          $ref: '#/definitions/presenter.TaskDependTaskResp'
+        type: array
+      description:
+        type: string
+      end_at:
+        type: string
+      id:
+        type: string
+      order:
+        type: integer
+      parent:
+        $ref: '#/definitions/presenter.TaskParentResp'
+      start_at:
+        type: string
+      story_point:
+        type: integer
+      subtasks:
+        items:
+          $ref: '#/definitions/presenter.TaskSubTaskResp'
+        type: array
+      title:
+        type: string
+      user:
+        allOf:
+        - $ref: '#/definitions/presenter.TaskUserResp'
+        description: Relationships
+    type: object
+  presenter.InviteMemberResponse:
     properties:
       board_id:
         type: string
@@ -113,26 +209,129 @@ definitions:
       user_board_role_id:
         type: string
     type: object
-  presenter.UserBoard:
+  presenter.InviteUserToBoard:
+    properties:
+      board_id:
+        example: aeec51f9-dde3-409d-9415-df771f5b8a62
+        type: string
+      email:
+        example: inviatee_email.com
+        type: string
+      role:
+        example: editor
+        type: string
+      user_board_role_id:
+        example: 31e8d41b-a84e-41c6-9564-4e932fccf213
+        type: string
+    type: object
+  presenter.NotifResp:
+    properties:
+      created_at:
+        type: string
+      desc:
+        type: string
+      id:
+        type: string
+      is_seen:
+        type: boolean
+      notif_type:
+        $ref: '#/definitions/notification.NotificationType'
+    type: object
+  presenter.ReorderColumnItem:
+    properties:
+      id:
+        type: string
+    type: object
+  presenter.ReorderColumnsRequest:
     properties:
       board_id:
         type: string
-      created_at:
+      columns:
+        items:
+          $ref: '#/definitions/presenter.ReorderColumnItem'
+        type: array
+    type: object
+  presenter.TaskDependTaskResp:
+    properties:
+      id:
         type: string
-      name:
-        type: string
-      type:
+      title:
         type: string
     type: object
-  presenter.UserRegisterReq:
+  presenter.TaskParentResp:
+    properties:
+      id:
+        type: string
+      title:
+        type: string
+    type: object
+  presenter.TaskSubTaskResp:
+    properties:
+      id:
+        type: string
+      title:
+        type: string
+    type: object
+  presenter.TaskUserResp:
     properties:
       email:
         type: string
       first_name:
         type: string
+      id:
+        type: string
       last_name:
         type: string
+    type: object
+  presenter.UpdateTaskColReq:
+    properties:
+      column_id:
+        type: string
+    required:
+    - column_id
+    type: object
+  presenter.UpdatedTaskResp:
+    properties:
+      description:
+        type: string
+      end_at:
+        type: string
+      id:
+        type: string
+      order:
+        type: integer
+      start_at:
+        type: string
+      story_point:
+        type: integer
+      title:
+        type: string
+    type: object
+  presenter.UserLoginReq:
+    properties:
+      email:
+        example: valid_email@folan.com
+        type: string
       password:
+        example: Abc@123
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  presenter.UserRegisterReq:
+    properties:
+      email:
+        example: abc@gmail.com
+        type: string
+      first_name:
+        example: yourname
+        type: string
+      last_name:
+        example: yourlastname
+        type: string
+      password:
+        example: Abc@123
         type: string
     required:
     - email
@@ -180,7 +379,76 @@ info:
   title: heisenflow-System
   version: "1.0"
 paths:
+  /boards:
+    post:
+      consumes:
+      - application/json
+      description: Create a new board for the authenticated user.
+      parameters:
+      - description: Board details
+        in: body
+        name: board
+        required: true
+        schema:
+          $ref: '#/definitions/presenter.CreateBoardReq'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: 'board: the created board details'
+          schema:
+            $ref: '#/definitions/presenter.CreateBoardResponse'
+        "400":
+          description: 'error: bad request, invalid board details'
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: 'error: internal server error'
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Create user board
+      tags:
+      - Boards
   /boards/{boardID}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a specific board by its ID for the authenticated user.
+      parameters:
+      - description: Board ID
+        in: path
+        name: boardID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad request, invalid user claims, or board ID format
+          schema:
+            additionalProperties: true
+            type: object
+        "403":
+          description: Forbidden, user does not have permission to delete the board
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Delete board
+      tags:
+      - Boards
     get:
       consumes:
       - application/json
@@ -208,6 +476,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Get full board by ID
       tags:
       - Boards
@@ -229,8 +499,7 @@ paths:
         "200":
           description: 'invite: the details of the invitation'
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/presenter.InviteMemberResponse'
         "400":
           description: 'error: bad request, invalid invitation details'
           schema:
@@ -246,6 +515,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Invite user to board
       tags:
       - Boards
@@ -285,6 +556,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Create columns
       tags:
       - Columns
@@ -319,7 +592,50 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Delete column
+      tags:
+      - Columns
+  /columns/reorder:
+    put:
+      consumes:
+      - application/json
+      description: Reorder the columns of a board for the authenticated user.
+      parameters:
+      - description: Reorder Columns Request
+        in: body
+        name: ReorderColumnsRequest
+        required: true
+        schema:
+          $ref: '#/definitions/presenter.ReorderColumnsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Columns reordered successfully
+          schema:
+            items:
+              $ref: '#/definitions/presenter.ColumnResponseItem'
+            type: array
+        "400":
+          description: Bad request, invalid reorder details
+          schema:
+            additionalProperties: true
+            type: object
+        "403":
+          description: Forbidden, permission denied
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Reorder columns
       tags:
       - Columns
   /login:
@@ -328,12 +644,12 @@ paths:
       - application/json
       description: Authenticate a user with email and password.
       parameters:
-      - description: Login details
+      - description: User Login details
         in: body
-        name: login
+        name: user
         required: true
         schema:
-          type: object
+          $ref: '#/definitions/presenter.UserLoginReq'
       produces:
       - application/json
       responses:
@@ -350,6 +666,66 @@ paths:
       summary: Login an existing user
       tags:
       - Auth
+  /notifications:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of notifications for the authenticated user.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Notifications successfully fetched
+          schema:
+            $ref: '#/definitions/presenter.NotifResp'
+        "400":
+          description: Bad request, invalid user claims or user not found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get user notifications
+      tags:
+      - Notifications
+  /notifications/{notifID}:
+    put:
+      consumes:
+      - application/json
+      description: Marks a specific notification as seen for the authenticated user.
+      parameters:
+      - description: Notification ID
+        in: path
+        name: notifID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Notification marked as seen
+          schema:
+            $ref: '#/definitions/presenter.NotifResp'
+        "400":
+          description: Bad request, invalid user claims, or notification ID format
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Mark notification as seen
+      tags:
+      - Notifications
   /public/boards:
     get:
       consumes:
@@ -382,6 +758,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Get public boards
       tags:
       - Boards
@@ -390,12 +768,6 @@ paths:
       consumes:
       - application/json
       description: Refresh the user's authentication token using a valid refresh token.
-      parameters:
-      - description: Bearer {refresh_token}
-        in: header
-        name: Authorization
-        required: true
-        type: string
       produces:
       - application/json
       responses:
@@ -414,6 +786,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Refresh authentication token
       tags:
       - Auth
@@ -469,8 +843,7 @@ paths:
         "201":
           description: 'response: details of created task'
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/presenter.CreateTaskResp'
         "400":
           description: 'error: bad request, invalid task details'
           schema:
@@ -492,7 +865,83 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Create task
+      tags:
+      - Tasks
+  /tasks/{taskID}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve the full details of a task by its ID for the authenticated
+        user.
+      parameters:
+      - description: Task ID
+        in: path
+        name: taskID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Task successfully fetched
+          schema:
+            $ref: '#/definitions/presenter.FullTaskResp'
+        "400":
+          description: Bad request, invalid task ID or user not found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get full task by ID
+      tags:
+      - Tasks
+  /tasks/{taskID}/column:
+    put:
+      consumes:
+      - application/json
+      description: Update the column of a task by its ID for the authenticated user.
+      parameters:
+      - description: Task ID
+        in: path
+        name: taskID
+        required: true
+        type: string
+      - description: Update Task Column Request
+        in: body
+        name: UpdateTaskColReq
+        required: true
+        schema:
+          $ref: '#/definitions/presenter.UpdateTaskColReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Task successfully updated
+          schema:
+            $ref: '#/definitions/presenter.UpdatedTaskResp'
+        "400":
+          description: Bad request, invalid task ID or column ID, or dependent task
+            issues
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update task column by ID
       tags:
       - Tasks
   /tasks/dependency:
@@ -536,6 +985,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Add task dependency
       tags:
       - Tasks
@@ -559,8 +1010,7 @@ paths:
         "200":
           description: 'boards: paginated list of user''s boards'
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/presenter.BoardUserResp'
         "400":
           description: 'error: bad request, wrong claim type'
           schema:
@@ -571,39 +1021,15 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Get user's boards
       tags:
       - Boards
-    post:
-      consumes:
-      - application/json
-      description: Create a new board for the authenticated user.
-      parameters:
-      - description: Board details
-        in: body
-        name: board
-        required: true
-        schema:
-          $ref: '#/definitions/presenter.UserBoard'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: 'board: the created board details'
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: 'error: bad request, invalid board details'
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: 'error: internal server error'
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Create user board
-      tags:
-      - Boards
+securityDefinitions:
+  BearerAuth:
+    description: '"Type ''Bearer'' followed by a space and your JWT token."'
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
